--- a/P02-VehiclesAPI/pricing-service/src/main/resources/application.properties
+++ b/P02-VehiclesAPI/pricing-service/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.datasource.url=jdbc:h2:mem:pricedata
 
 spring.data.rest.basePath=services
 server.port=8082
+
+# Eureka
+spring.application.name=pricing-service
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+instance.preferIpAddress=true
